--- a/res/layout/view_day_embedded.xml
+++ b/res/layout/view_day_embedded.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:id="@+id/dayViewGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minWidth="240dp"
@@ -149,28 +148,14 @@
                 android:text="" />
         </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/buttonClear"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingTop="@dimen/view_padding" >
-
-            <Button
-                android:id="@+id/buttonClear"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:drawableLeft="?attr/removeContentIcon"
-                android:text="@string/clear"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <Button
-                android:id="@+id/buttonClose"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/close"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-        </LinearLayout>
+            android:layout_gravity="center"
+            android:drawableLeft="?attr/removeContentIcon"
+            android:text="@string/clear"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
 </ScrollView>
