--- a/res/values/test.xml
+++ b/res/values/test.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <bool name="test">true</bool>
+    <bool name="test">false</bool>
 
     <string name="test25">Test 25 years</string>
 
