--- a/res/values-v14/themes.xml
+++ b/res/values-v14/themes.xml
@@ -15,6 +15,8 @@
         <item name="android:windowActionBar">true</item>
         <item name="textViewTextColor">@android:color/black</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
+        <item name="listIcon">@drawable/ic_list_light</item>
+        <item name="removeContentIcon">@drawable/ic_remove_content_light</item>
         <item name="dialog_spinnerItemTextColor">@android:color/black</item>
         <item name="dialog_textViewTextColor">@android:color/black</item>
         <item name="dialog_editableTextViewTextColor">@android:color/black</item>
