--- a/res/layout/activity_main_one_pane.xml
+++ b/res/layout/activity_main_one_pane.xml
@@ -1,18 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <com.google.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/adUnitId"
-        ads:loadAdOnCreate="true"
-        android:gravity="center" />
+    android:layout_height="match_parent" >
 
     <fragment
         android:id="@+id/calendar"
@@ -20,4 +9,4 @@
         android:layout_height="match_parent"
         class="com.anna.sent.soft.womancyc.fragments.MonthViewFragment" />
 
-</LinearLayout>
+</RelativeLayout>
