--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -26,6 +26,7 @@
             android:key="pref_send_password_to_email"
             android:summary="@string/pref_send_password_to_email_summary"
             android:title="@string/pref_send_password_to_email_title" >
+            <intent android:action="com.anna.sent.soft.womancyc.actions.EmailPasswordActionActivity" />
         </Preference>
 
         <CheckBoxPreference
@@ -51,28 +52,17 @@
         <Preference
             android:summary="@string/pref_rate_summary"
             android:title="@string/pref_rate_title" >
-            <intent
-                android:action="android.intent.action.VIEW"
-                android:data="market://details?id=com.anna.sent.soft.womancyc" />
+            <intent android:action="com.anna.sent.soft.womancyc.actions.MarketWomanCycActionActivity" />
         </Preference>
         <Preference
             android:summary="@string/pref_support_summary"
             android:title="@string/pref_support_title" >
-            <intent
-                android:action="android.intent.action.SENDTO"
-                android:data="@string/supportData"
-                android:launchMode="singleInstance" >
-                <extra
-                    android:name="android.intent.extra.SUBJECT"
-                    android:value="@string/app_name" />
-            </intent>
+            <intent android:action="com.anna.sent.soft.womancyc.actions.EmailSupportActionActivity" />
         </Preference>
         <Preference
             android:summary="@string/pref_childbirthdate_summary"
             android:title="@string/pref_childbirthdate_title" >
-            <intent
-                android:action="android.intent.action.VIEW"
-                android:data="market://details?id=com.anna.sent.soft.childbirthdate" />
+            <intent android:action="com.anna.sent.soft.womancyc.actions.MarketChildbirthDateActionActivity" />
         </Preference>
     </PreferenceCategory>
 
