--- a/res/layout/activity_main_two_panes_with_ad.xml
+++ b/res/layout/activity_main_two_panes_with_ad.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false" >
@@ -32,7 +33,8 @@
             ads:adUnitId="@string/adUnitId"
             ads:loadAdOnCreate="true"
             android:gravity="center"
-            android:paddingBottom="@dimen/view_padding" />
+            android:paddingBottom="@dimen/view_padding"
+            tools:ignore="MissingRegistered" />
     </RelativeLayout>
 
 </LinearLayout>
