--- a/res/xml/my_cycle_widget_provider_info_small.xml
+++ b/res/xml/my_cycle_widget_provider_info_small.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:initialLayout="@layout/widget_layout"
     android:minHeight="40dp"
     android:minResizeHeight="40dp"
@@ -7,4 +8,5 @@
     android:minWidth="40dp"
     android:previewImage="@drawable/preview_small"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="0" />
+    android:updatePeriodMillis="0"
+    tools:ignore="UnusedAttribute" />
