--- a/res/values/preferences_values_untr.xml
+++ b/res/values/preferences_values_untr.xml
@@ -16,6 +16,11 @@
         <item>1</item>
     </string-array>
 
+    <array name="style">
+        <item>@style/AppTheme</item>
+        <item>@style/AppThemeLight</item>
+    </array>
+
     <integer name="defaultTheme">0</integer>
 
 </resources>
