--- a/res/values/about.xml
+++ b/res/values/about.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
     <string name="google_app_name">WomanCyc</string>
     <string name="yandex_app_name">WomanCyc: календарь женских циклов</string>
