ads:testDevices seems to be broken

--- a/res/layout/activity_main_one_pane_with_ad.xml
+++ b/res/layout/activity_main_one_pane_with_ad.xml
@@ -19,6 +19,7 @@
         ads:adSize="BANNER"
         ads:adUnitId="@string/adUnitId"
         ads:loadAdOnCreate="true"
+        ads:testDevices="TEST_EMULATOR"
         android:gravity="center"
         android:paddingBottom="@dimen/view_padding"
         tools:ignore="MissingRegistered" />
