--- a/res/layout/activity_main_two_panes_with_ad.xml
+++ b/res/layout/activity_main_two_panes_with_ad.xml
@@ -32,6 +32,7 @@
             ads:adSize="BANNER"
             ads:adUnitId="@string/adUnitId"
             ads:loadAdOnCreate="true"
+            ads:testDevices="TEST_EMULATOR"
             android:gravity="center"
             android:paddingBottom="@dimen/view_padding"
             tools:ignore="MissingRegistered" />
