--- a/res/values/preferences_values_untr.xml
+++ b/res/values/preferences_values_untr.xml
@@ -23,4 +23,19 @@
 
     <integer name="defaultTheme">0</integer>
 
+    <string-array name="language" translatable="false">
+        <item>Русский</item>
+        <item>English</item>
+    </string-array>
+    <string-array name="language_values" translatable="false">
+        <item>0</item>
+        <item>2</item>
+    </string-array>
+    <string-array name="locale" translatable="false">
+        <item>ru</item>
+        <item>en</item>
+    </string-array>
+
+    <integer name="defaultLanguage">2</integer>
+
 </resources>
