--- a/res/values/about.xml
+++ b/res/values/about.xml
@@ -3,7 +3,7 @@
 
     <string name="google_app_name">WomanCyc</string>
     <string name="yandex_app_name">WomanCyc</string>
-    <string name="google_marketing_message">WomanCyc: calendar of woman's cycle</string>
+    <string name="google_marketing_message">"WomanCyc: calendar of woman's cycle"</string>
     <string name="description">
 <![CDATA[
 WomanCyc — это приложение-календарь, в котором можно отмечать:
