--- a/WomanCyc/res/values-ru/help.xml
+++ b/WomanCyc/res/values-ru/help.xml
@@ -9,18 +9,17 @@
     <string-array name="helpParts">
         <item>
 <![CDATA[
-<P>
 Пункты <B>&laquo;Меню-Сохранить данные&raquo;</B> (экспорт) и <B>&laquo;Меню-Восстановить данные&raquo;</B> (импорт).<BR/><BR/>
 
-Файлы для экспорта-импорта хранятся в корне SD-карты, в каталоге WomanCyc.<BR/><BR/>
+Файлы для экспорта-импорта хранятся в корне SD-карты, в каталоге WomanCyc. При удалении приложения или очистке данных эти файлы не удаляются.<BR/><BR/>
 
 Вы можете задать имя файла или выбрать существующий файл из списка.<BR/><BR/>
 
 Настройки приложения (все, что в <B>&laquo;Меню-Настройки&raquo;</B>) в этот файл НЕ сохраняются.<BR/><BR/>
 
-С помощью пункта <B>&laquo;Меню-Сброс данных&raquo;</B> можно осуществить сброс (очистку) всех данных (настройки при этом также НЕ сбрасываются).<BR/><BR/>
+С помощью пункта <B>&laquo;Меню-Сброс данных&raquo;</B> можно осуществить сброс (очистку) всех данных (настройки при этом НЕ сбрасываются).<BR/><BR/>
 
-С помощью импорта-экспорта осуществляются:<BR/><BR/>
+С помощью экспорта-импорта осуществляются:<BR/><BR/>
 
 <I> * Перенос данных с одного устройства на другое.</I><BR/><BR/>
 
@@ -37,7 +36,7 @@
 
 <I> * Редактирование порций данных.</I>
 Данные сохраняются в читаемом формате в xml-файл,
-который Вы можете самостоятельно редактировать с помощью текстового редактора.<BR/><BR/>
+который Вы можете самостоятельно редактировать с помощью текстового редактора и других программных средств.<BR/><BR/>
 
 Формат файла:<BR/><BR/>
 
@@ -59,36 +58,38 @@
 
 Порядок записей по датам и порядок перечисления атрибутов записи не имеет значения.
 Пробелы и символы табуляции не имеют значения. Атрибуты записи могут отсутствовать.<BR/><BR/>
-</P>
 ]]>
         </item>
         <item>
 <![CDATA[
-Если вы не хотите, чтобы ваши личные данные случайно увидел кто-нибудь, имеющий доступ к вашему устройству,
+Если Вы не хотите, чтобы ваши личные данные случайно увидел кто-нибудь, имеющий доступ к вашему устройству,
 установите пароль в <B>&laquo;Меню-Настройки-Пароль&raquo;</B>.<BR/><BR/>
 
-Пароль можно отправить на свой email для восстановления в случае, если вы его забудете.
+<I> * Пароль можно отправить на свой email для восстановления в случае, если Вы его забудете.</I>
 При выборе пункта <B>&laquo;Меню-Настройки-Отправить пароль по email&raquo;</B> откроется почтовый клиент, установленный на устройстве.
-В поле &laquo;Кому&raquo; будет внесен адрес эл. почты владельца устройства
+В поле &laquo;Кому&raquo; будет внесен адрес эл.&nbsp;почты владельца устройства
 (на некоторых устройствах это поле может оставаться незаполненным, в этом случае наберите адрес).<BR/><BR/>
 
-Будьте внимательны: чтобы сбросить забытый пароль, необходимо переустановить приложение или очистить данные приложения
+<I> * Если Вы забыли пароль, то возможны два сценария:</I><BR/><BR/>
+1) Вы экспортировали свои данные в файл или Вы не вводили важных данных:<BR/><BR/>
+Чтобы сбросить забытый пароль, необходимо удалить приложение и установить его заново или очистить данные приложения
 (Настройки вашего устройства-Приложения-WomanCyc-Очистить данные).
 При этом все внесенные вами данные, кроме сохраненных (экспортированных) файлов, будут потеряны.<BR/><BR/>
+2) Вы НЕ экспортировали свои данные в файл и они для Вас важны:<BR/><BR/>
+Напишите о своей проблеме по адресу
+<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/><BR/>
 
 При установке пароля появится пункт <B>&laquo;Меню-Блокировка и выход&raquo;</B>.
 Если выйти из приложения с помощью этого пункта, то при следующем запуске приложения будет запрошен ввод пароля.<BR/><BR/>
 
 Можно установить пункт <B>&laquo;Меню-Настройки-Автоматическая блокировка&raquo;</B>.
-В этом случае пароль будет запрашиваться каждый раз при выходе из приложения.<BR/><BR/>
+В этом случае пароль будет запрашиваться каждый раз при запуске приложения.<BR/><BR/>
 
-Кроме того, вы можете задать с помощью пункта <B>&laquo;Меню-Настройки-Скрывать виджет&raquo;</B>, скрывать ли виджет при заблокированном приложении.<BR/><BR/>
-</P>
+Кроме того, Вы можете задать с помощью пункта <B>&laquo;Меню-Настройки-Скрывать виджет&raquo;</B>, скрывать ли содержимое виджета при заблокированном приложении.<BR/><BR/>
 ]]>
         </item>
         <item>
 <![CDATA[
-<P>
 Доступны две конфигурации виджета:<BR/><BR/>
 
  * &lt;день цикла&gt;<BR/><BR/>
@@ -100,9 +101,8 @@
 
 При нажатии на виджет запускается приложение.<BR/><BR/>
 
-С помощью виджета вы можете определить задержку: например, &laquo;30 (28)&raquo; &mdash;
+С помощью виджета Вы можете определить задержку: например, &laquo;30 (28)&raquo; &mdash;
 сегодня 30-й день цикла при заданной или средней продолжительности цикла 28 дней (2 дня задержки).<BR/><BR/>
-</P>
 ]]>
         </item>
     </string-array>
