--- a/WomanCyc/res/values-ru/help.xml
+++ b/WomanCyc/res/values-ru/help.xml
@@ -25,14 +25,10 @@
 
 <I> * Хранение на устройстве данных нескольких пользователей.</I>
 Сохраняйте разные данные в файлы с разными именами и восстанавливайте для редактирования.
-(Не забывайте снова сохранить файл после редактирования.)
-Если есть необходимость в более удобном переключении пользователей, напишите пожелание по адресу
-<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/><BR/>
+(Не забывайте снова сохранить файл после редактирования.)<BR/><BR/>
 
 <I> * Автоматизированная система бэкапов.</I>
-Делайте бэкапы данных на SD-карту устройства и переносите их на другие устройства, отправляйте по email, в Dropbox и т.&nbsp;п.
-Если есть необходимость в автоматической системе бэкапов, напишите пожелание по адресу
-<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/><BR/>
+Делайте бэкапы данных на SD-карту устройства и переносите их на другие устройства, отправляйте по email, в Dropbox и т.&nbsp;п.<BR/><BR/>
 
 <I> * Редактирование порций данных.</I>
 Данные сохраняются в читаемом формате в xml-файл,
