--- a/WomanCyc/res/values/about.xml
+++ b/WomanCyc/res/values/about.xml
@@ -6,56 +6,56 @@
     <string name="google_marketing_message">"WomanCyc: calendar of woman's cycle"</string>
     <string name="description">
 <![CDATA[
-WomanCyc — это приложение-календарь, в котором можно отмечать:
- * дни менструаций (без пометок или с дополнительными пометками об интенсивности выделений);
- * половые акты (без пометок или с пометкой «защищенный секс», «незащищенный секс»);
- * факт принятия таблетки (удобно для тех, кто пользуется оральными контрацептивами, которые, как правило, необходимо принимать один раз в день);
- * а также можно делать небольшие заметки. Предусмотрен интерфейс быстрой вставки заметки, повторяемой изо дня в день.
+WomanCyc is a simple period tracker application, you can mark in calendar:
+ * menstruation days and blood flow intensity;
+ * intercourses (protected and unprotected);
+ * days when you took pill (if you take oral contraceptives once a day);
+ * small notes. there is user interface for autocomplete if you repeat the same notes.
 
-Особенности приложения:
+Features of the application:
 
- * Приложение подходит для женщин с регулярными и нерегулярными менструациями.
+ * The application may be used by women with regular and irregular menstruation.
 
- * Приложение не навязывает каких-либо ограничений на длину цикла или фактическую продолжительность менструации. Можно редактировать любые дни календаря (также в будущем), приложение будет работать корректно.
+ * The application does not impose any restrictions on expected length of cycle, actual length of cycle, or bleeding length. You can edit any days of calendar (also days in future), the application will work correctly.
 
- * Каждый день цикла нумеруется по порядку, начиная с первого дня менструации. Вы можете оценить, сколько дней осталось до следующей менструации или сколько дней длится задержка. Если менструация не наступила вовремя, то нумерация дней продолжится.
+ * Every day of cycle is numbered beginning with the first day of menstruation. You can estimate how many days are left until the next menstrual period or number of days delay lasts. If your period does not come on time, the numbering of the days continue.
 
- * Заданная или средняя продолжительность цикла. Продолжительность текущего (прогнозируемого) цикла может быть заданной или вычисляемой на основе продолжительностей предыдущих циклов (для максимальной корректности расчета учитывается не более трех последних циклов, продолжительность которых не превышала 60 дней). Для редактирования этих параметров нажмите кнопку «Меню» вашего устройства и выберите пункт «Настройки».
+ * The application can use specified or average length of cycle.
 
- * Расчет фертильных и нефертильных периодов НЕ производится.
- Причины такого решения:
- 1) если вы хотите забеременеть, занимайтесь сексом в середине цикла плюс-минус одна неделя - в эти дни происходит овуляция;
- 2) если вы не хотите забеременеть, не используйте способ определения фертильных-нефертильных дней по календарю - это очень ненадежно.
+ * Calculation of fertile-infertile periods are not made.
+ Reasons:
+ 1) if you want to get pregnant, you should have sex in the middle of your cycle plus or minus one week - in these days an ovulation occurs;
+ 2) if you don't want to get pregnant, you should not use the calendar-method of identifying fertile-infertile days - it's unsafe.
 
-Особенности интерфейса:
+Features of user interface:
 
- * для редактирования клетки календаря произведите долгое нажатие (в однопанельном режиме);
- * навигация по календарю с помощью кнопок «Следующий/предыдущий месяц/день», возможность перехода на конкретную дату;
+ * to edit cell of calendar make long click (in one-panel mode);
+ * to navigate in calendar use buttons «Next/Previous month/day», also you can navigate to specified date;
 
- * интерфейс строгий, минималистичный, доступны две темы — темная и светлая;
- * однопанельный или двухпанельный режимы в зависимости от размера и ориентации экрана.
+ * user interface is strict, minimalistic, there are two themes available (dark and light);
+ * one-panel or two-panel mode is used depending on size and orientation of the device screen.
 
-Дополнительные функции:
+Additional features:
 
- * Статистика по циклам.
- * Экспорт и импорт данных.
- * Пароль на запуск приложения.
- * Виджет.
+ * Statistics.
+ * Export and import of user data.
+ * Ability to setup password.
+ * Widget.
 
-Функции реализованы с максимальной гибкостью. Дополнительную информацию смотрите в справке приложения (кнопка «Меню» устройства, пункт «Справка»).
+Additional information is available in the help part of the application.
 
-Приложением могут пользоваться девочки-подростки, женщины, а также мужчины, следящие за циклом своей подруги.
+The application is useful for women and men watching the cycle of their girlfriends.
 
-С замечаниями и предложениями обращайтесь по электронной почте anna.sent@gmail.com.
+Please send your comments and suggestions at anna.sent@gmail.com.
 
-Ключевые слова: календарь, менструальный цикл, менструация, женский календарь, менструальный календарь, календарь менструаций.
+Key words: calendar, menstrual cycle, menstruation, period, woman calendar, period tracker, menstrual calendar.
 ]]>
     </string>
     <string name="what_is_new">
 <![CDATA[
 v1.0.7:
 * English translation.
-Please send your comments and suggestions about translation on email anna.sent@gmail.com.
+Please send your comments and suggestions about translation at anna.sent@gmail.com.
 * Minor improvements.
 ]]>
     </string>
