--- a/WomanCyc/res/values/about.xml
+++ b/WomanCyc/res/values/about.xml
@@ -6,7 +6,7 @@
     <string name="google_marketing_message">"WomanCyc: calendar of woman's cycle"</string>
     <string name="description">
 <![CDATA[
-WomanCyc is a simple period tracker application, you can mark in calendar:
+"WomanCyc is a simple period tracker application, you can mark in calendar:
  * menstruation days and blood flow intensity;
  * intercourses (protected and unprotected);
  * days when you took pill (if you take oral contraceptives once a day);
@@ -48,7 +48,7 @@ The application is useful for women and men watching the cycle of their girlfrie
 
 Please send your comments and suggestions at anna.sent@gmail.com.
 
-Key words: calendar, menstrual cycle, menstruation, period, woman calendar, period tracker, menstrual calendar.
+Key words: calendar, menstrual cycle, menstruation, period, woman calendar, period tracker, menstrual calendar."
 ]]>
     </string>
     <string name="what_is_new">
