--- a/WomanCyc/res/values/about.xml
+++ b/WomanCyc/res/values/about.xml
@@ -14,7 +14,7 @@
 
 Features of the application:
 
- * The application may be used by women with regular and irregular menstruation.
+ * The application can be used by women with regular and irregular menstruation.
 
  * The application does not impose any restrictions on expected length of cycle, actual length of cycle, or bleeding length. You can edit any days of calendar (also days in future), the application will work correctly.
 
