--- a/WomanCyc/res/values-ru/help.xml
+++ b/WomanCyc/res/values-ru/help.xml
@@ -73,7 +73,7 @@
 При этом все внесенные вами данные, кроме сохраненных (экспортированных) файлов, будут потеряны.<BR/><BR/>
 2) Вы НЕ экспортировали свои данные в файл и они для Вас важны:<BR/><BR/>
 Напишите о своей проблеме по адресу
-<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/><BR/>
+<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>, в ответ вы получите инструкции.<BR/><BR/>
 
 При установке пароля появится пункт <B>&laquo;Меню-Блокировка и выход&raquo;</B>.
 Если выйти из приложения с помощью этого пункта, то при следующем запуске приложения будет запрошен ввод пароля.<BR/><BR/>
