--- a/WomanCyc/res/layout/dialog_export.xml
+++ b/WomanCyc/res/layout/dialog_export.xml
@@ -9,7 +9,9 @@
         android:id="@+id/fileName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:text="" />
+        android:inputType="text"
+        android:maxLines="1"
+        android:textAppearance="?android:attr/textAppearance"
+        android:textColor="?attr/dialog_editableTextViewTextColor" />
 
 </LinearLayout>
